--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -90,6 +90,8 @@ xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 		PAGES
 ========================================================================== */
 
+@import 'pages/manifest';
+
 /* -----------------------------------------------------------------------
 		HOMEPAGE
 -------------------------------------------------------------------------- */
@@ -97,7 +99,9 @@ xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 
 /* -----------------------------------------------------------------------
+		CONTACT
 -------------------------------------------------------------------------- */
+@import 'contact/manifest';
 
 
 /*====================================================================
