--- a/app/theme/templates/base.html
+++ b/app/theme/templates/base.html
@@ -5,7 +5,7 @@
 
 </head>
 
-<body id="index" class="home"> 
+<body id="index" class="{% block page_class_name %}base{% endblock page_class_name %}"> 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CXSL8R"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
