--- a/app/theme/templates/index.html
+++ b/app/theme/templates/index.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 
+{% block page_class_name %} home {% endblock page_class_name %}
+
 {% block content %}
 
-	<h2 class="short-description">Product&nbsp;manager and UX&nbsp;strategist in New&nbsp;York&nbsp;City.</h2> 
+	<h1 class="short-description">Product&nbsp;manager and UX&nbsp;strategist in New&nbsp;York&nbsp;City.</h1> 
 
 	<p>Funnel optimization for fashion ecommerce.</p>
 
+	<p>Want to get in touch? <a href="contact">Contact Me</a>.</p> 
 
 	<p>
 	
@@ -18,5 +21,4 @@
 		Nothing useful to contribute to <a target="_blank" data-outbound-social="twitter" href="https://twitter.com/michaelappuhn">Twitter</a>. 
 	</p>
 
-	<p>Reach via email at <a data-outbound-social="email" target="_blank" href="mailto:mike.appuhn@gmail.com">mike.appuhn@gmail.com</a>.</p> 
 {% endblock content %}
