changed description / location

--- a/app/theme/templates/index.html
+++ b/app/theme/templates/index.html
@@ -4,9 +4,14 @@
 
 {% block content %}
 
-	<h1 class="short-description">Product&nbsp;manager and UX&nbsp;strategist in New&nbsp;York&nbsp;City.</h1> 
+	<h1 class="short-description">Product&nbsp;manager and UX&nbsp;strategist in Los&nbsp;Angeles (formerly&nbsp;NYC).</h1> 
 
-	<p>Funnel optimization for fashion ecommerce.</p>
+	<p>
+	Product pipelines for cross-functional teams. <br />
+	Customer-focused strategy with a UX perspective. <br />
+	Funnel optimization for fashion ecommerce. <br />
+	Research, analysis, design, and code.<br />
+	</p>
 
 	<p>Want to get in touch? <a href="contact">Contact Me</a>.</p> 
 
