--- a/app/sass/homepage/_mobile.scss
+++ b/app/sass/homepage/_mobile.scss
@@ -22,7 +22,7 @@ canvas {
 .home p {
 	font-size: 1.3em;
 	line-height: 1.6em;
-	margin: 1.8em auto 0;
-    max-width: 420px;
+	margin: 1.8em 0 0;
+    max-width: 600px;
     text-align: left;
 }
