removed accounts that are friendz-only

--- a/app/theme/templates/index.html
+++ b/app/theme/templates/index.html
@@ -16,13 +16,13 @@
 
 	<p>
 	
-		Visual dad jokes on <a target="_blank" data-outbound-social="instagram" href="https://instagram.com/michaelappuhn">Instagram</a>.
+		Connect on <a target="_blank" data-outbound-social="linkedin" href="https://www.linkedin.com/in/michaelappuhn/">LinkedIn</a>.
 		<br/>
-
+		Follow me on <a target="_blank" data-outbound-social="github " href="https://github.com/michaelappuhn">GitHub</a>.
+		<br/> 
 		Weirdo side projects on <a target="_blank" data-outbound-social="tumblr" href="https://michaelappuhn.tumblr.com">Tumblr</a>.
 		<br/>
 
-		Nothing useful to contribute to <a target="_blank" data-outbound-social="twitter" href="https://twitter.com/michaelappuhn">Twitter</a>. 
 	</p>
 
 {% endblock content %}
