changed title to reflect the fact that i still do design and wont be stopping that any time soon lol

--- a/app/theme/templates/index.html
+++ b/app/theme/templates/index.html
@@ -4,11 +4,11 @@
 
 {% block content %}
 
-	<h1 class="short-description">Product&nbsp;manager and UX&nbsp;strategist in Los&nbsp;Angeles (formerly&nbsp;NYC).</h1> 
+	<h1 class="short-description">Product&nbsp;designer, manager, and strategist in Los&nbsp;Angeles (formerly&nbsp;NYC).</h1> 
 
 	<p>
-	Product pipelines for cross-functional teams. <br />
 	Customer-focused strategy with a UX perspective. <br />
+	Product pipelines for cross-functional teams. <br />
 	Research, analysis, design, and code.<br />
 	</p>
 
