--- a/app/theme/templates/index.html
+++ b/app/theme/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-	<h1 class="short-description">Product&nbsp;designer, manager, and strategist in Los&nbsp;Angeles (formerly&nbsp;NYC).</h1> 
+	<h1 class="short-description">Product&nbsp;designer, manager, and strategist in Los&nbsp;Angeles.</h1> 
 
 	<p>
 	Customer-focused strategy with a UX perspective. <br />
