changed "tumblr" to "my blog," since I am removing tumblr features

--- a/app/theme/templates/index.html
+++ b/app/theme/templates/index.html
@@ -20,7 +20,7 @@
 		<br/>
 		Follow me on <a target="_blank" data-outbound-social="github " href="https://github.com/michaelappuhn">GitHub</a>.
 		<br/> 
-		Weirdo side projects on <a target="_blank" data-outbound-social="tumblr" href="https://michaelappuhn.tumblr.com">Tumblr</a>.
+		Weirdo side projects on <a target="_blank" data-outbound-social="tumblr" href="https://blog.michaelappuhn.com">my blog</a>.
 		<br/>
 
 	</p>
